fixed : overlap dimensions vh

--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ html, body {
   font-family: 'Poppins';
   
 }
+
+*{
+  box-sizing: border-box;
+}
+
 #loading-screen {
   position: fixed;
   top: 0;
@@ -152,7 +157,7 @@ html, body {
 
 section {
   /*scroll-snap-align: start; /* Chaque section s'alignera au début */
-  height: 100dvh; /* Chaque section fait 100% de la hauteur de la vue */
+  min-height: 100dvh; /* Chaque section fait 100% de la hauteur de la vue */
 }
 #burger{
   display: none;
@@ -265,7 +270,7 @@ header>nav a, header>nav button{
   display: flex;
   justify-content: space-between;
   align-items: center; 
-  height: 100dvh;
+  min-height: 100dvh;
   position: relative; /* Nécessaire pour le positionnement absolu */
 }
 
@@ -408,7 +413,7 @@ header>nav a, header>nav button{
 
 /*projects*/
 #projects {
-  height: 100dvh;
+  min-height: 100dvh;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -721,7 +726,7 @@ textarea::-webkit-scrollbar {
 	margin-left: 15%;
   margin-right: 15%;
   justify-content: space-between;
-  height: 100dvh;
+  min-height: 100dvh;
   align-items: center;
 }
 
@@ -749,14 +754,13 @@ textarea::-webkit-scrollbar {
 #about>div>a{
   cursor: pointer;
   border-radius: 20px;
-  margin-top: 4rem;
+  margin-top: 2rem;
   margin-bottom: 2rem;
   border: none;
   background-color: #695853;
-  padding: 1rem 4rem;
+  padding: 1rem;
   text-align: center;
   max-width: 150px;
-  max-height: 50px;
 }
 #about>div>a>button{
   cursor: pointer;
